--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -75,6 +75,8 @@ runs:
           shell: bash
           run: |
               cp -f "${GITHUB_WORKSPACE}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config.properties.bak"
+              ls -l "${GITHUB_WORKSPACE}/conf/"
+              cat "${GITHUB_WORKSPACE}/conf/config.properties.bak"
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/filesystem.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/dataSources/filesystem.sh" 6667 6888 test/mn test/iginx_mn false false conf/config.properties
