--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -25,6 +25,15 @@ inputs:
 runs:
     using: "composite" # Mandatory parameter
     steps:
+        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
+          name: change config for FileSystem and Parquet
+          uses: ./.github/actions/dbRunner
+          with:
+              DB-name: ${{ matrix.DB-name }}
+          shell: bash
+          run: |
+              cp -f "${GITHUB_WORKSPACE}/conf/config.properties" "${GITHUB_WORKSPACE}/core/target/iginx-core-*-SNAPSHOT/conf/config.properties"
+
         - name: Set if-CapExp
           shell: bash
           run: |
