--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -29,11 +29,11 @@ inputs:
 runs:
     using: "composite" # Mandatory parameter
     steps:
-        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
-          name: change config for FileSystem and Parquet
-          uses: ./.github/actions/dbRunner
-          with:
-              DB-name: ${{ matrix.DB-name }}
+#        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
+#          name: change config for FileSystem and Parquet
+#          uses: ./.github/actions/dbRunner
+#          with:
+#              DB-name: ${{ matrix.DB-name }}
 
         - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
           name: save config for FileSystem and Parquet
