--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>dataSources/filesystem</module>
         <module>dataSources/iotdb12</module>
         <module>dataSources/influxdb</module>
-        <module>dataSources/opentsdb</module>
+<!--        <module>dataSources/opentsdb</module>-->
         <module>dataSources/postgresql</module>
         <module>dataSources/parquet</module>
         <module>dataSources/redis</module>
