--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -24,10 +24,10 @@ jobs:
                     [
                         "FileSystem",
                         "IoTDB12",
-                        "InfluxDB",
+#                        "InfluxDB",
                         "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
+#                        "Redis",
+#                        "MongoDB",
                         "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
