--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -24,11 +24,11 @@ jobs:
                     [
                         "FileSystem",
                         "IoTDB12",
-                        "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
-                        "Parquet",
+#                        "InfluxDB",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
+#                        "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
         steps:
