--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -22,7 +22,7 @@ jobs:
                 os: [ubuntu-latest, macos-latest]
                 DB-name:
                     [
-                        "FileSystem",
+#                        "FileSystem",
                         "IoTDB12",
 #                        "InfluxDB",
                         "PostgreSQL",
