--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -60,9 +60,9 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: oriHasDataExpHasData
 
-            - name: oriHasDataExpHasData IT
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
+#            - name: oriHasDataExpHasData IT
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
 
             - name: Clear history data
               uses: ./.github/actions/dbWriter
