--- a/conf/config.properties
+++ b/conf/config.properties
@@ -153,7 +153,7 @@ fragment_cache_threshold=131072
 
 enablePushDown=false
 
-useStreamExecutor=false
+useStreamExecutor=true
 
 ##########################
 ### 内存控制
