--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -23,12 +23,12 @@ jobs:
                 DB-name:
                     [
                         "FileSystem",
-                        "IoTDB12",
-                        "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
-                        "Parquet",
+#                        "IoTDB12",
+#                        "InfluxDB",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
+#                        "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
         steps:
