--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -82,12 +82,12 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: oriNoDataExpNoData
 
-            - name: List dir
-              run: |
-                mkdir /home/runner/work/IGinX/IGinX/test/test/nt
-                mkdir /home/runner/work/IGinX/IGinX/test/nt
-                ls /home/runner/work/IGinX/IGinX/test/
-                ls /home/runner/work/IGinX/IGinX/test/test
+#            - name: List dir
+#              run: |
+#                mkdir /home/runner/work/IGinX/IGinX/test/test/nt
+#                mkdir /home/runner/work/IGinX/IGinX/test/nt
+#                ls /home/runner/work/IGinX/IGinX/test/
+#                ls /home/runner/work/IGinX/IGinX/test/test
                 
 
             - name: oriNoDataExpNoData IT
