--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -20,16 +20,16 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [windows-latest]
+                os: [ubuntu-latest, macos-latest, windows-latest]
                 DB-name:
                     [
                         "FileSystem",
                         "IoTDB12",
                         "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
-                        "Parquet",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
+#                        "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
         steps:
@@ -69,7 +69,7 @@ jobs:
             - name: Clear history data
               uses: ./.github/actions/dbWriter
               with:
-                  DB-name: ${{ inputs.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
             - name: oriHasDataExpHasData Normal IT
@@ -97,7 +97,7 @@ jobs:
             - name: Clear history data
               uses: ./.github/actions/dbWriter
               with:
-                  DB-name: ${{ inputs.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
             - name: oriNoDataExpNoData Normal IT
@@ -125,7 +125,7 @@ jobs:
             - name: Clear history data
               uses: ./.github/actions/dbWriter
               with:
-                  DB-name: ${{ inputs.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
             - name: oriHasDataExpNoData Normal IT
@@ -153,7 +153,7 @@ jobs:
             - name: Clear history data
               uses: ./.github/actions/dbWriter
               with:
-                  DB-name: ${{ inputs.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
             - name: oriNoDataExpHasData Normal IT
