--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,7 +13,7 @@
     <name>IGinX Core</name>
 
     <properties>
-        <jersey.version>2.27</jersey.version>
+        <jersey.version>2.34</jersey.version>
     </properties>
 
     <dependencyManagement>
@@ -232,8 +232,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
+                    </compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                     <encoding>UTF-8</encoding>
                     <verbose>false</verbose>
                 </configuration>
