--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>--add-modules=jdk.incubator.vector</arg>
+                        </compilerArgs>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -208,6 +213,9 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.8.1</version>
                         <configuration>
+                            <compilerArgs>
+                                <arg>--add-modules=jdk.incubator.vector</arg>
+                            </compilerArgs>
                             <source>17</source>
                             <target>17</target>
                         </configuration>
