--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -38,10 +38,10 @@ jobs:
             - name: Run ZooKeeper
               uses: ./.github/actions/zookeeperRunner
             - name: Run test for meta manager
-              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
+              run: mvn test -q -pl test -am -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
 
             - name: Run test for sync protocol
-              run: mvn test -q -Dtest=ZooKeeperSyncProtocolTest -DfailIfNoTests=false -P-format
+              run: mvn test -q -pl test -am -Dtest=ZooKeeperSyncProtocolTest -DfailIfNoTests=false -P-format
 
             - uses: codecov/codecov-action@v1
               with:
@@ -77,10 +77,10 @@ jobs:
               uses: ./.github/actions/etcdRunner
 
             - name: Run test for meta manager
-              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
+              run: mvn test -q -pl test -am -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
 
             - name: Run test for sync protocol
-              run: mvn test -q -Dtest=ETCDSyncProtocolTest -DfailIfNoTests=false -P-format
+              run: mvn test -q -pl test -am -Dtest=ETCDSyncProtocolTest -DfailIfNoTests=false -P-format
 
             - uses: codecov/codecov-action@v1
               with:
