依旧处理该问题，通过添加-Dsurefire.failIfNoSpecifiedTests=false解决

--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0</version>
                     <configuration>
-                        <compilerArgs>
-                            <arg>--add-modules=jdk.incubator.vector</arg>
-                        </compilerArgs>
+                        <argLine>--add-modules=jdk.incubator.vector</argLine>
                     </configuration>
                 </plugin>
             </plugins>
