--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -114,7 +114,7 @@ jobs:
               shell: bash
               run: |
                   chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
-                  mvn test -Dtest=RestIT -DfailIfNoTests=false -P-format
+                  mvn test -Dtest=RestIT "-Dsurefire.failIfNoSpecifiedTests=false" -P-format
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
