--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -23,12 +23,12 @@ jobs:
                 os: [ubuntu-latest, macos-latest, windows-latest]
                 DB-name:
                     [
-                        "FileSystem",
-                        "IoTDB12",
-                        "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
+#                        "FileSystem",
+#                        "IoTDB12",
+#                        "InfluxDB",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
                         "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
@@ -72,6 +72,11 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
+            - name: list dir
+              shell: bash
+              run: |
+                  tree ./
+
             - name: oriHasDataExpHasData Normal IT
               shell: bash
               run: |
@@ -80,6 +85,11 @@ jobs:
                   else
                     mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
                   fi
+
+            - name: list dir
+              shell: bash
+              run: |
+                  tree ./
 
             # 第 2 阶段测试开始==========================================
             - name: Prepare CapExp environment oriNoDataExpNoData
