--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -53,33 +53,33 @@ jobs:
               run: |
                   mvn clean package -DskipTests -P-format -q
 
-            # 第 1 阶段测试开始==========================================
-            - name: Prepare CapExp environment oriHasDataExpHasData
-              uses: ./.github/actions/capacityExpansionUnionTest
-              with:
-                  version: ${VERSION}
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: oriHasDataExpHasData
-
-            - name: oriHasDataExpHasData IT
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
-
-            - name: Clear history data
-              uses: ./.github/actions/dbWriter
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: clearHistoryData
-
-            - name: oriHasDataExpHasData Normal IT
-              shell: bash
-              run: |
-                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
-                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
-                  else
-                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
-                  fi
+#            # 第 1 阶段测试开始==========================================
+#            - name: Prepare CapExp environment oriHasDataExpHasData
+#              uses: ./.github/actions/capacityExpansionUnionTest
+#              with:
+#                  version: ${VERSION}
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: oriHasDataExpHasData
+#
+#            - name: oriHasDataExpHasData IT
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
+#
+#            - name: Clear history data
+#              uses: ./.github/actions/dbWriter
+#              with:
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: clearHistoryData
+#
+#            - name: oriHasDataExpHasData Normal IT
+#              shell: bash
+#              run: |
+#                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
+#                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
+#                  else
+#                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+#                  fi
 
             # 第 2 阶段测试开始==========================================
             - name: Prepare CapExp environment oriNoDataExpNoData
