--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -82,108 +82,108 @@ jobs:
                     mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
                   fi
 
-            # 第 2 阶段测试开始==========================================
-            - name: Prepare CapExp environment oriNoDataExpNoData
-              uses: ./.github/actions/capacityExpansionUnionTest
-              with:
-                  version: ${VERSION}
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: oriNoDataExpNoData
-
-            - name: oriNoDataExpNoData IT
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false -P-format
-
-            - name: Clear history data
-              uses: ./.github/actions/dbWriter
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: clearHistoryData
-
-            - name: oriNoDataExpNoData Normal IT
-              shell: bash
-              run: |
-                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
-                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
-                  else
-                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
-                  fi
-
-            # 第 3 阶段测试开始==========================================
-            - name: Prepare CapExp environment oriHasDataExpNoData
-              uses: ./.github/actions/capacityExpansionUnionTest
-              with:
-                  version: ${VERSION}
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: oriHasDataExpNoData
-
-            - name: oriHasDataExpNoData IT
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false -P-format
-
-            - name: Clear history data
-              uses: ./.github/actions/dbWriter
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: clearHistoryData
-
-            - name: oriHasDataExpNoData Normal IT
-              shell: bash
-              run: |
-                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
-                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
-                  else
-                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
-                  fi
-
-            # 第 4 阶段测试开始==========================================
-            - name: Prepare CapExp environment oriNoDataExpHasData
-              uses: ./.github/actions/capacityExpansionUnionTest
-              with:
-                  version: ${VERSION}
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: oriNoDataExpHasData
-
-            - name: oriNoDataExpHasData IT
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false -P-format
-
-            - name: Clear history data
-              uses: ./.github/actions/dbWriter
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: clearHistoryData
-
-            - name: oriNoDataExpHasData Normal IT
-              shell: bash
-              run: |
-                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
-                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
-                  else
-                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
-                  fi
-
-            # 测试只读节点===============================================
-            - name: Prepare CapExp environment for testReadOnly
-              uses: ./.github/actions/capacityExpansionUnionTest
-              with:
-                  version: ${VERSION}
-                  DB-name: ${{ matrix.DB-name }}
-                  Test-Way: oriHasDataExpHasData
-                  Read-Only: true
-
-            - name: Run testReadOnly
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#testReadOnly -DfailIfNoTests=false -P-format
-                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
-                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
-                  else
-                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
-                  fi
+#            # 第 2 阶段测试开始==========================================
+#            - name: Prepare CapExp environment oriNoDataExpNoData
+#              uses: ./.github/actions/capacityExpansionUnionTest
+#              with:
+#                  version: ${VERSION}
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: oriNoDataExpNoData
+#
+#            - name: oriNoDataExpNoData IT
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false -P-format
+#
+#            - name: Clear history data
+#              uses: ./.github/actions/dbWriter
+#              with:
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: clearHistoryData
+#
+#            - name: oriNoDataExpNoData Normal IT
+#              shell: bash
+#              run: |
+#                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
+#                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
+#                  else
+#                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+#                  fi
+#
+#            # 第 3 阶段测试开始==========================================
+#            - name: Prepare CapExp environment oriHasDataExpNoData
+#              uses: ./.github/actions/capacityExpansionUnionTest
+#              with:
+#                  version: ${VERSION}
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: oriHasDataExpNoData
+#
+#            - name: oriHasDataExpNoData IT
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false -P-format
+#
+#            - name: Clear history data
+#              uses: ./.github/actions/dbWriter
+#              with:
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: clearHistoryData
+#
+#            - name: oriHasDataExpNoData Normal IT
+#              shell: bash
+#              run: |
+#                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
+#                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
+#                  else
+#                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+#                  fi
+#
+#            # 第 4 阶段测试开始==========================================
+#            - name: Prepare CapExp environment oriNoDataExpHasData
+#              uses: ./.github/actions/capacityExpansionUnionTest
+#              with:
+#                  version: ${VERSION}
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: oriNoDataExpHasData
+#
+#            - name: oriNoDataExpHasData IT
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false -P-format
+#
+#            - name: Clear history data
+#              uses: ./.github/actions/dbWriter
+#              with:
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: clearHistoryData
+#
+#            - name: oriNoDataExpHasData Normal IT
+#              shell: bash
+#              run: |
+#                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
+#                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
+#                  else
+#                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+#                  fi
+#
+#            # 测试只读节点===============================================
+#            - name: Prepare CapExp environment for testReadOnly
+#              uses: ./.github/actions/capacityExpansionUnionTest
+#              with:
+#                  version: ${VERSION}
+#                  DB-name: ${{ matrix.DB-name }}
+#                  Test-Way: oriHasDataExpHasData
+#                  Read-Only: true
+#
+#            - name: Run testReadOnly
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#testReadOnly -DfailIfNoTests=false -P-format
+#                  if [ "${{ matrix.DB-name }}" == "IoTDB12" ]; then
+#                    mvn test -q -Dtest=${IOTDB_FUNCTEST} -DfailIfNoTests=false -P-format
+#                  else
+#                    mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+#                  fi
 
             - name: Show IGinX log
               if: always()
