测试parquet为什么出错3

--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -23,7 +23,7 @@ jobs:
                     [
 #                        "IoTDB12",
 #                        "InfluxDB",
-                        "Parquet",
+#                        "Parquet",
 #                        "PostgreSQL",
 #                        "FileSystem",
 #                        "Redis",
