--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -29,7 +29,7 @@ jobs:
 #                        "PostgreSQL",
 #                        "Redis",
 #                        "MongoDB",
-#                        "Parquet",
+                        "Parquet",
                     ]
         runs-on: ${{ matrix.os }}
         steps:
