--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -7,7 +7,7 @@ on:
 env:
     VERSION: 0.6.0-SNAPSHOT
 #    FUNCTEST: NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT
-    FUNCTEST: SQLSessionIT,SQLSessionPoolIT,UDFIT
+    FUNCTEST: SQLSessionIT,SQLSessionPoolIT,UDFIT,CompactionIT
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
