--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -190,25 +190,26 @@ runs:
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Install MySQL
           shell: bash
-          run: choco install mysql --params ".\mysql"
+          run: choco install mysql --params "./mysql"
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Configure and start MySQL instances
           shell: bash
           run: |
-            mkdir .\mysql\data1 .\mysql\data2 .\mysql\data3
-            .\mysql\bin\mysqld --initialize-insecure --datadir=.\mysql\data1 --port=3307
-            .\mysql\bin\mysqld --initialize-insecure --datadir=.\mysql\data2 --port=3308
-            .\mysql\bin\mysqld --initialize-insecure --datadir=.\mysql\data3 --port=3309
-            .\mysql\bin\mysqld --console --datadir=.\mysql\data1 --port=3307 &
-            .\mysql\bin\mysqld --console --datadir=.\mysql\data2 --port=3308 &
-            .\mysql\bin\mysqld --console --datadir=.\mysql\data3 --port=3309 &
+            mkdir ./mysql/data1 ./mysql/data2 ./mysql/data3
+            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data1 --port=3307
+            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data2 --port=3308
+            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data3 --port=3309
+            ./mysql/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
+            ./mysql/bin/mysqld --console --datadir=./mysql/data2 --port=3308 &
+            ./mysql/bin/mysqld --console --datadir=./mysql/data3 --port=3309 &
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Setup Database for each instance
           shell: bash
           run: |
-            .\mysql\bin\mysql -u root --port=3307
-            .\mysql\bin\mysql -u root --port=3308
-            .\mysql\bin\mysql -u root --port=3309
+            ./mysql/bin/mysql -u root --port=3307
+            ./mysql/bin/mysql -u root --port=3308
+            ./mysql/bin/mysql -u root --port=3309
+        
         
