--- a/.github/actions/capacityExpansionUnionTest/action.yml
+++ b/.github/actions/capacityExpansionUnionTest/action.yml
@@ -28,9 +28,7 @@ runs:
         - name: check the status of MySQL
           shell: bash
           run: |
-              sudo systemctl status mysql
-              num_instances=$(ps aux | grep mysqld | grep -v grep | wc -l)
-              echo "Number of MySQL instances running: $num_instances"
+              docker ps
 
         - name: Clear history data
           uses: ./.github/actions/dbWriter
