--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -20,7 +20,7 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [macos-latest, windows-latest]
+                os: [windows-latest]
                 DB-name: ["MySQL"]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
